<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KGN Chat</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_nick">Nick</string>
    <string name="prompt_address">Server address</string>
    <string name="prompt_port">Port</string>
    <string name="hint_example_nick">user123</string>
    <string name="hint_example_address">www.example.com</string>
    <string name="hint_example_port">8040</string>
    <string name="button_connect">Connect</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_nick">Invalid nick</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="error_invalid_port">Invalid port</string>
    <string name="error_nick_in_use">Nick is already in use by someone else</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_connection_failed_tip">Please verify your information and try again</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>

</resources>
